fix: set numeric_only true

--- a/airbnb_price_prediction_regression/airbnb_price_prediction_regression_py.ipynb
+++ b/airbnb_price_prediction_regression/airbnb_price_prediction_regression_py.ipynb
@@ -1265,10 +1265,9 @@
     }
    ],
    "source": [
-    "numeric_cols = df.select_dtypes(include=np.number)\n",
-    "corr = numeric_cols.corr(method='kendall')\n",
+    "corr = df.corr(method='kendall', numeric_only=True)\n",
     "plt.figure(figsize=(15,8))\n",
-    "sns.heatmap(corr, annot=True)"
+    "sns.heatmap(corr, annot=True);"
    ]
   },
   {
