Fix: simplified initialization for the LinearRegression() and fixed typo

--- a/airbnb_price_prediction_regression/airbnb_price_prediction_regression_py.ipynb
+++ b/airbnb_price_prediction_regression/airbnb_price_prediction_regression_py.ipynb
@@ -2061,7 +2061,7 @@
    "source": [
     "def modelEval(ytest, yPreds):\n",
     "    print(\"\\n---- Evaluation Metrics ----\")\n",
-    "    print(f\"Mean Absoulte Error: {np.mean(np.abs(yPreds - ytest)):.2f}\")\n",
+    "    print(f\"Mean Absolute Error: {np.mean(np.abs(yPreds - ytest)):.2f}\")\n",
     "    print(f\"Mean Squared Error: {np.mean(np.power(yPreds - ytest, 2)):.2f}\")\n",
     "    print(f\"Root Mean Squared Error: {np.sqrt(np.mean(np.power(yPreds - ytest, 2))):.2f}\")\n",
     "    print(f\"R2 score: {r2score(ytest, yPreds):.2f}\")"
@@ -2143,7 +2143,7 @@
     }
    ],
    "source": [
-    "model = mlpack.LinearRegression(check_input_matrices=False, copy_all_inputs=False, lambda_=0.0, verbose=False)\n",
+    "model = mlpack.LinearRegression()\n",
     "\n",
     "k = 5\n",
     "kf = KFold(n_splits = k, random_state = None)\n",
@@ -2173,7 +2173,7 @@
     "    modelEval(y_test, yPredsLr)\n",
     "\n",
     "print(\"\\n-- Mean Evaluation Metrics --\")\n",
-    "print(f\"Mean Absoulte Error: {np.mean(mae_score):.2f}\")\n",
+    "print(f\"Mean Absolute Error: {np.mean(mae_score):.2f}\")\n",
     "print(f\"Mean Squared Error: {np.mean(mse_score):.2f}\")\n",
     "print(f\"Root Mean Squared Error: {np.mean(rmse_score):.2f}\")\n",
     "print(f\"R2 score: {np.mean(r2_score):.2f}\")"
@@ -2255,7 +2255,7 @@
     }
    ],
    "source": [
-    "model = mlpack.LinearRegression(check_input_matrices=False, copy_all_inputs=False, lambda_=0.1, verbose=False)\n",
+    "model = mlpack.LinearRegression()\n",
     "\n",
     "k = 5\n",
     "kf = KFold(n_splits = k, random_state = None)\n",
@@ -2285,7 +2285,7 @@
     "    modelEval(y_test, yPredsRr)\n",
     "\n",
     "print(\"\\n-- Mean Evaluation Metrics --\")\n",
-    "print(f\"Mean Absoulte Error: {np.mean(mae_score):.2f}\")\n",
+    "print(f\"Mean Absolute Error: {np.mean(mae_score):.2f}\")\n",
     "print(f\"Mean Squared Error: {np.mean(mse_score):.2f}\")\n",
     "print(f\"Root Mean Squared Error: {np.mean(rmse_score):.2f}\")\n",
     "print(f\"R2 score: {np.mean(r2_score):.2f}\")"
@@ -2397,7 +2397,7 @@
     "    modelEval(y_test, yPredsBlr)\n",
     "\n",
     "print(\"\\n-- Mean Evaluation Metrics --\")\n",
-    "print(f\"Mean Absoulte Error: {np.mean(mae_score):.2f}\")\n",
+    "print(f\"Mean Absolute Error: {np.mean(mae_score):.2f}\")\n",
     "print(f\"Mean Squared Error: {np.mean(mse_score):.2f}\")\n",
     "print(f\"Root Mean Squared Error: {np.mean(rmse_score):.2f}\")\n",
     "print(f\"R2 score: {np.mean(r2_score):.2f}\")"
