update ssl breast cancer wisconsin pca

--- a/breast_cancer_wisconsin_transformation_with_pca/breast-cancer-wisconsin-pca-py.ipynb
+++ b/breast_cancer_wisconsin_transformation_with_pca/breast-cancer-wisconsin-pca-py.ipynb
@@ -45,7 +45,6 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "from matplotlib import pyplot as plt\n",
-        "import ssl\n",
         "%matplotlib inline"
       ]
     },
@@ -58,8 +57,7 @@
       "outputs": [],
       "source": [
         "# Load the Breast Cancer data from an online URL.\n",
-        "ssl._create_default_https_context = ssl._create_unverified_context\n",
-        "data = pd.read_csv('https://lab.mlpack.org/data/breast-cancer-wisconsin.csv', header=None)"
+        "data = pd.read_csv('https://datasets.mlpack.org/breast-cancer-wisconsin.csv', header=None)"
       ]
     },
     {
