update ssl: covertype rf

--- a/forest_covertype_prediction_with_random_forests/covertype-rf-py.ipynb
+++ b/forest_covertype_prediction_with_random_forests/covertype-rf-py.ipynb
@@ -30,8 +30,7 @@
       "source": [
         "import mlpack\n",
         "import pandas as pd\n",
-        "import numpy as np\n",
-        "import ssl"
+        "import numpy as np"
       ]
     },
     {
@@ -43,8 +42,7 @@
       "outputs": [],
       "source": [
         "# Load the dataset from an online URL.\n",
-        "ssl._create_default_https_context = ssl._create_unverified_context\n",
-        "df = pd.read_csv('https://lab.mlpack.org/data/covertype-small.csv.gz')"
+        "df = pd.read_csv('https://datasets.mlpack.org/covertype-small.csv.gz')"
       ]
     },
     {
