update ssl: cifar 10 pca

--- a/cifar10_transformation_with_pca/cifar-10-pca-py.ipynb
+++ b/cifar10_transformation_with_pca/cifar-10-pca-py.ipynb
@@ -78,7 +78,7 @@
       ],
       "source": [
         "# Load the CIFAR10 data from an online URL.\n",
-        "!wget --no-check-certificate -O - https://lab.mlpack.org/data/cifar10-images.tar.gz | tar -xz"
+        "!wget -O - https://datasets.mlpack.org/cifar10-images.tar.gz | tar -xz"
       ]
     },
     {
