update ssl: movie lens cf

--- a/movie_lens_prediction_with_cf/movie-lens-cf-py.ipynb
+++ b/movie_lens_prediction_with_cf/movie-lens-cf-py.ipynb
@@ -73,7 +73,7 @@
       ],
       "source": [
         "# Load the MovieLens small data from an online URL.\n",
-        "!rm -rf ml-latest-small && wget --no-check-certificate -q -O tmp.zip https://lab.mlpack.org/data/MovieLens-small.zip && unzip tmp.zip && rm tmp.zip"
+        "!rm -rf ml-latest-small && wget -q -O tmp.zip https://datasets.mlpack.org/MovieLens-small.zip && unzip tmp.zip && rm tmp.zip"
       ]
     },
     {
